Fix thumbnails panel
When there fit one more thumbnail into each row without scrollbar, the calculation was off, which led to thumbnails jumping around.

--- a/src/styles/sections/thumbnails.scss
+++ b/src/styles/sections/thumbnails.scss
@@ -1,6 +1,7 @@
 .tify-thumbnails {
 	@extend %panel;
 	min-height: 100%;
+	overflow: scroll; // NOTE: This is required for thumbnails to be calculated correctly
 	padding: g(.5);
 	position: relative;
 	user-select: none;
